--- a/docs/styles.css
+++ b/docs/styles.css
@@ -20,7 +20,7 @@ body {
             rgba(244, 246, 251, 0.5),
             rgba(244, 246, 251, 0.5)
         ),
-        url("/static/images/f1-bg.jpg");
+        url("f1-bg.jpg");
 
     background-size: cover;
     background-position: center;
